Resolves: fdo#46939 don't rename autotext when source and dest are the same